⚡ feat(core): 体检陈旧度 — ConfigDoctorHealth TTL（报告超时转 UNKNOWN stale=true——旧快照不冒充现在干净 + reexamine 手动刷新面恒可用 + 默认无 TTL 零变化 + details 增 examinedAt/freshnessTtlMs/stale 有界三键）+ 红队 3 例 + 既有回归（resolve T467-T468, impl283, spec142, Consul TTL check 借鉴；A 会话第 11 轮 #116）